--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     background-color: #1d2021;
     color: #d4be98;
 }
+/* Navigation menu styles */
 .header_menu {
     display: flex;
     flex-direction: row;
